[gd_scene load_steps=49 format=2]

[ext_resource path="res://Enemies/Fungo/fbas_1body_human_00.png" type="Texture" id=1]
[ext_resource path="res://Enemies/Fungo/Fungo.gd" type="Script" id=2]
[ext_resource path="res://Enemies/WanderController.tscn" type="PackedScene" id=3]
[ext_resource path="res://Overlap/HurtBox.tscn" type="PackedScene" id=4]
[ext_resource path="res://Stats.tscn" type="PackedScene" id=5]

[sub_resource type="Animation" id=3]
resource_name = "BaterDireira"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 61 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.7 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "anim_finish"
} ]
}

[sub_resource type="Animation" id=4]
resource_name = "BaterEsquerda"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 62 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.7 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "anim_finish"
} ]
}

[sub_resource type="Animation" id=5]
resource_name = "BaterFrente"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 57 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.6 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "anim_finish"
} ]
}

[sub_resource type="Animation" id=6]
resource_name = "Batertras"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 46 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.7 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "anim_finish"
} ]
}

[sub_resource type="Animation" id=39]
resource_name = "IdleFront"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( -0.1 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=7]
resource_name = "PuloBaixo"
length = 0.45
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 2, 1 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.4 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "anim_finish"
} ]
}

[sub_resource type="Animation" id=8]
resource_name = "PuloCima"
length = 0.45
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 18, 17 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.4 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "anim_finish"
} ]
}

[sub_resource type="Animation" id=9]
resource_name = "PuloDireita"
length = 0.46
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 34, 33 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.4 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "anim_finish"
} ]
}

[sub_resource type="Animation" id=10]
resource_name = "PuloEsquerda"
length = 0.45
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 37, 36 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.4 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "anim_finish"
} ]
}

[sub_resource type="Animation" id=11]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 64 ]
}

[sub_resource type="Animation" id=12]
resource_name = "Walk_cima"
length = 0.25
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 52, 53, 54 ]
}

[sub_resource type="Animation" id=13]
resource_name = "Walk_direita"
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 64, 65, 66, 67, 68, 69 ]
}

[sub_resource type="Animation" id=14]
resource_name = "Walk_esquerda"
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 70, 71, 70, 71, 70, 71 ]
}

[sub_resource type="Animation" id=15]
resource_name = "walk_Baixo"
length = 0.25
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 48, 49, 50 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray(  ),
"transitions": PoolRealArray(  ),
"values": [  ]
}

[sub_resource type="CapsuleShape2D" id=2]
radius = 9.0
height = 0.0

[sub_resource type="AnimationNodeAnimation" id=27]
animation = "Batertras"

[sub_resource type="AnimationNodeAnimation" id=28]
animation = "BaterFrente"

[sub_resource type="AnimationNodeAnimation" id=29]
animation = "BaterDireira"

[sub_resource type="AnimationNodeAnimation" id=30]
animation = "BaterEsquerda"

[sub_resource type="AnimationNodeBlendSpace2D" id=18]
blend_point_0/node = SubResource( 27 )
blend_point_0/pos = Vector2( 0, 1 )
blend_point_1/node = SubResource( 28 )
blend_point_1/pos = Vector2( 0, -1 )
blend_point_2/node = SubResource( 29 )
blend_point_2/pos = Vector2( 1, 0 )
blend_point_3/node = SubResource( 30 )
blend_point_3/pos = Vector2( -1, 0 )
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id=40]
animation = "IdleFront"

[sub_resource type="AnimationNodeAnimation" id=41]
animation = "IdleFront"

[sub_resource type="AnimationNodeAnimation" id=42]
animation = "IdleFront"

[sub_resource type="AnimationNodeAnimation" id=43]
animation = "IdleFront"

[sub_resource type="AnimationNodeBlendSpace2D" id=44]
blend_point_0/node = SubResource( 40 )
blend_point_0/pos = Vector2( 0, 1 )
blend_point_1/node = SubResource( 41 )
blend_point_1/pos = Vector2( 1, 0 )
blend_point_2/node = SubResource( 42 )
blend_point_2/pos = Vector2( -1, 0 )
blend_point_3/node = SubResource( 43 )
blend_point_3/pos = Vector2( 0, -1 )
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id=31]
animation = "PuloCima"

[sub_resource type="AnimationNodeAnimation" id=32]
animation = "PuloBaixo"

[sub_resource type="AnimationNodeAnimation" id=33]
animation = "PuloDireita"

[sub_resource type="AnimationNodeAnimation" id=34]
animation = "PuloEsquerda"

[sub_resource type="AnimationNodeBlendSpace2D" id=19]
blend_point_0/node = SubResource( 31 )
blend_point_0/pos = Vector2( 0, 1 )
blend_point_1/node = SubResource( 32 )
blend_point_1/pos = Vector2( 0, -1 )
blend_point_2/node = SubResource( 33 )
blend_point_2/pos = Vector2( 1, 0 )
blend_point_3/node = SubResource( 34 )
blend_point_3/pos = Vector2( -1, 0 )
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id=35]
animation = "Walk_cima"

[sub_resource type="AnimationNodeAnimation" id=36]
animation = "walk_Baixo"

[sub_resource type="AnimationNodeAnimation" id=37]
animation = "Walk_esquerda"

[sub_resource type="AnimationNodeAnimation" id=38]
animation = "Walk_direita"

[sub_resource type="AnimationNodeBlendSpace2D" id=20]
blend_point_0/node = SubResource( 35 )
blend_point_0/pos = Vector2( 0, 1 )
blend_point_1/node = SubResource( 36 )
blend_point_1/pos = Vector2( 0, -1 )
blend_point_2/node = SubResource( 37 )
blend_point_2/pos = Vector2( -1, 0 )
blend_point_3/node = SubResource( 38 )
blend_point_3/pos = Vector2( 1, 0 )
blend_mode = 1

[sub_resource type="AnimationNodeStateMachineTransition" id=45]

[sub_resource type="AnimationNodeStateMachineTransition" id=46]

[sub_resource type="AnimationNodeStateMachineTransition" id=47]

[sub_resource type="AnimationNodeStateMachineTransition" id=48]

[sub_resource type="AnimationNodeStateMachineTransition" id=49]

[sub_resource type="AnimationNodeStateMachineTransition" id=50]

[sub_resource type="AnimationNodeStateMachine" id=16]
states/Atack/node = SubResource( 18 )
states/Atack/position = Vector2( 445, 174 )
states/Idle/node = SubResource( 44 )
states/Idle/position = Vector2( 445, 88 )
states/Launch/node = SubResource( 19 )
states/Launch/position = Vector2( 596, 53 )
states/Walk/node = SubResource( 20 )
states/Walk/position = Vector2( 303, 53 )
transitions = [ "Idle", "Walk", SubResource( 45 ), "Walk", "Idle", SubResource( 46 ), "Idle", "Launch", SubResource( 47 ), "Launch", "Idle", SubResource( 48 ), "Idle", "Atack", SubResource( 49 ), "Atack", "Idle", SubResource( 50 ) ]
start_node = "Idle"

[sub_resource type="AnimationNodeStateMachinePlayback" id=17]

[node name="Fungo" type="KinematicBody2D"]
position = Vector2( 3, 2 )
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 1.26724, 0.351032 )
texture = ExtResource( 1 )
hframes = 16
vframes = 16
frame = 64

[node name="WanderController" parent="." instance=ExtResource( 3 )]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/BaterDireira = SubResource( 3 )
anims/BaterEsquerda = SubResource( 4 )
anims/BaterFrente = SubResource( 5 )
anims/Batertras = SubResource( 6 )
anims/IdleFront = SubResource( 39 )
anims/PuloBaixo = SubResource( 7 )
anims/PuloCima = SubResource( 8 )
anims/PuloDireita = SubResource( 9 )
anims/PuloEsquerda = SubResource( 10 )
anims/RESET = SubResource( 11 )
anims/Walk_cima = SubResource( 12 )
anims/Walk_direita = SubResource( 13 )
anims/Walk_esquerda = SubResource( 14 )
anims/walk_Baixo = SubResource( 15 )

[node name="HurtBox" parent="." instance=ExtResource( 4 )]
collision_layer = 8
collision_mask = 128

[node name="CollisionShape2D" parent="HurtBox" index="0"]
shape = SubResource( 2 )

[node name="Stats" parent="." instance=ExtResource( 5 )]

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource( 16 )
anim_player = NodePath("../AnimationPlayer")
parameters/playback = SubResource( 17 )
parameters/Atack/blend_position = Vector2( 0, 0 )
parameters/Idle/blend_position = Vector2( 0, 0 )
parameters/Launch/blend_position = Vector2( 0, 0 )
parameters/Walk/blend_position = Vector2( 0, 0 )

[node name="Timer" type="Timer" parent="."]

[connection signal="area_entered" from="HurtBox" to="." method="_on_HurtBox_area_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]

[editable path="HurtBox"]
